--- a/Blog/blog/templates/blog/delete.html
+++ b/Blog/blog/templates/blog/delete.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-<h1>{{ object.title }} - Delete</h1>
-<p>{{ object.content }}</p>
+<h1>Aru you sure you want to delete?</h1>
+<p>{{ object.title }}</p>
+
+<form method="POST"> {% csrf_token %}
+    <button class="btn btn-danger">Yes, delete</button>
+</form>
 
 {% endblock %}
