--- a/Blog/blog/templates/base.html
+++ b/Blog/blog/templates/base.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
+{% include 'navbar.html' %}
+<div class="container-fluid">
+    {% block content %}
+    {% endblock %}
+</div>
 
-{% block content %}
-{% endblock %}
+{% include 'js.html' %}
 
 </body>
 </html>
