Project Django - code refactoring.

--- a/Blog/blog/templates/about.html
+++ b/Blog/blog/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block szczegoly %}
+{% block content %}
 
-To jest strona o mnie
+This is a page about me.
 
 {% endblock %}
