--- a/Blog/blog/templates/navbar.html
+++ b/Blog/blog/templates/navbar.html
@@ -8,14 +8,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/blog">Home</a>
+          <a class="nav-link" aria-current="page" href="/about">About me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/blog">Blog</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="d-flex" role="search" action="https:/www.google.com/search">
+        <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
